--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,6 +4,9 @@ on: workflow_dispatch # manual
 jobs:
   job:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: read
     steps:
     - uses: 'actions/checkout@v3'
     - id: git
