--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -4,6 +4,8 @@ on: workflow_dispatch # manual
 jobs:
   job:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
     - uses: 'actions/checkout@v3'
     - id: git
