--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      checks: read
+      statuses: read
     steps:
     - uses: 'actions/checkout@v3'
     - id: git
