--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -1,5 +1,9 @@
 name: Get and dump Rollup object (GraphQL)
-on: workflow_dispatch # manual
+on:
+  workflow_dispatch: # manual
+  push:
+    tags:
+    - '*'
 
 jobs:
   job:
@@ -10,12 +14,7 @@ jobs:
       statuses: read
     steps:
     - uses: 'actions/checkout@v3'
-    - id: git
-      name: get commit ref
-      run: |
-        echo ${{ github.ref }}
-        echo "::set-output name=commit_sha::$(git rev-parse HEAD^{commit})"
     - uses: actions/github-script@v6
       with:
         script: |
-          await require("./.github/workflows/graphql.js")("${{ steps.git.outputs.commit_sha }}", { context, github })
+          await require("./.github/workflows/graphql.js")({ context, github })
