--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: exit on rerun
+          name: success
           command: |
-            [ $(( $RANDOM % 2 )) == 0 ] && exit 0 || exit 1
+            exit 0
 
 workflows:
   version: 2
